# transformersworkshop

./: .gitignore  README.md
doc/: LICENSE
workshop/: stack.yaml
workshop/exercises/: exercises.cabal  run.sh
workshop/exercises/app/: CalcDiscount.hs  EvaluatorTypes.hs
workshop/monadblender/: LICENSE  monadblender.cabal  run.sh
workshop/monadblender/app/: MonadBlenderSample.hs  ReaderBlender.hs
workshop/monadblender/src/: MonadBlender.hs
workshop/samples/: run.sh  samples.cabal
workshop/samples/app/: FlippedReaderSample.hs  SpecialFunctionsSamples.hs  StackingSamples.hs
workshop/solutions/: LICENSE  run.sh  solutions.cabal
workshop/solutions/app/: CalcDiscountSolution.hs
workshop/solutions/app/stepbystep/: BasicEvaluator.hs  EnvironmentDependentEvaluator.hs  GracefulEvaluator.hs  IOEvaluator.hs  LiftingLoggingEvaluator.hs  LoggingEvaluator.hs  MonadicEvaluator.hs  ProfilingEvaluator.hs  README.md
