name:                samples
version:             0.1.0.0
synopsis:            Sample code for monad transformer workshop.
description:         Please see ../../README.md
homepage:            https://github.com/azadbolour/transformersworkshop.git
license:             BSD3
license-file:        LICENSE
author:              Azad Bolour
maintainer:          azadbolour@bolour.com
copyright:           2017 Bolour Compuring
build-type:          Simple
extra-source-files:  ../../README.md
cabal-version:       >=1.10

executable stacking-samples
  hs-source-dirs:      app
  main-is:             StackingSamples.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable special-functions-samples
  hs-source-dirs:      app
  main-is:             SpecialFunctionsSamples.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable flipped-reader-sample
  hs-source-dirs:      app
  main-is:             FlippedReaderSample.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/azadbolour/transformersworkshop.git

