name:                solutions
version:             0.1.0.0
synopsis:            Solutions for selected exercises of the monad transformer workshop.
description:         Please see ../../README.md
homepage:            https://github.com/azadbolour/transformersworkshop.git
license:             BSD3
license-file:        LICENSE
author:              Azad Bolour
maintainer:          azadbolour@bolour.com
copyright:           2017 Bolour Compuring
build-type:          Simple
extra-source-files:  ../../README.md
cabal-version:       >=1.10

executable calc-discount-solution
  hs-source-dirs:      app
  main-is:             CalcDiscountSolution.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable basic-evaluator
  hs-source-dirs:      app/stepbystep
  other-modules:       EvaluatorTypes
  main-is:             BasicEvaluator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , containers
  default-language:    Haskell2010

executable monadic-evaluator
  hs-source-dirs:      app/stepbystep
  other-modules:       EvaluatorTypes
  main-is:             MonadicEvaluator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , containers
  default-language:    Haskell2010

executable graceful-evaluator
  hs-source-dirs:      app/stepbystep
  other-modules:       EvaluatorTypes
  main-is:             GracefulEvaluator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , transformers
                     , containers
  default-language:    Haskell2010

executable environment-dependent-evaluator
  hs-source-dirs:      app/stepbystep
  other-modules:       EvaluatorTypes
  main-is:             EnvironmentDependentEvaluator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , containers
  default-language:    Haskell2010

executable profiling-evaluator
  hs-source-dirs:      app/stepbystep
  other-modules:       EvaluatorTypes
  main-is:             ProfilingEvaluator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , containers
  default-language:    Haskell2010

executable logging-evaluator
  hs-source-dirs:      app/stepbystep
  other-modules:       EvaluatorTypes
  main-is:             LoggingEvaluator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , containers
  default-language:    Haskell2010

executable lifting-logging-evaluator
  hs-source-dirs:      app/stepbystep
  other-modules:       EvaluatorTypes
  main-is:             LiftingLoggingEvaluator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , containers
  default-language:    Haskell2010

executable io-evaluator
  hs-source-dirs:      app/stepbystep
  other-modules:       EvaluatorTypes
  main-is:             IOEvaluator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/azadbolour/transformersworkshop.git

